change filter name

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,4 +45,4 @@ assetic:
             inputs:
                 - "%kernel.root_dir%/../src/Acme/DemoBundle/Resources/public/css/foo.css"
             filters:
-                - cssrewrite
+                - css_url_rewrite
